objects/Contract_Docs_to_Opps_MtM__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Doc_Account_Name__c</fullName>
        <formula>Contract_Documents__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Doc Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Doc_Type__c</fullName>
        <formula>TEXT(Contract_Documents__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Doc Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Documents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Documents</label>
        <referenceTo>Contract_Document__c</referenceTo>
        <relationshipLabel>Opps with This Contract Document</relationshipLabel>
        <relationshipName>Contract_Docs_to_Opps_MtMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>Contract_Documents__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts Docs for this Opp</relationshipLabel>
        <relationshipName>Contract_Docs_to_Opps_MtMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportuntiy_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportuntiy Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <formula>Opportunity__r.Signed_Opportunity_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programs</label>
        <type>Text</type>
    </fields>
    <label>Contract Docs to Opps MtM</label>
    <nameField>
        <label>Contract Docs to Opps MtM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Docs to Opps MtMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>